# course_work_7_drf

./: .env_examples  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
config/: docs.py  settings.py  urls.py
habit/: admin.py  models.py  permissions.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
habit/fixrures/: habits_fixture.json
habit/migrations/: 0001_initial.py  0002_initial.py  0003_alter_habit_related_habit.py
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/fixture/: users_fixture.json
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_alter_user_options_remove_user_username_user_avatar_and_more.py  0003_user_telegram_id.py
