[tool.poetry]
name = "course-work-7-drf"
version = "0.1.0"
description = ""
authors = ["Ramzes_13 <rslobolinsky13@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.6"
djangorestframework = "^3.15.2"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.9"
requests = "^2.32.3"
ipython = "^8.26.0"
redis = "^5.0.7"
flake8 = "^7.1.0"
pillow = "^10.4.0"
djangorestframework-simplejwt = "^5.3.1"
django-cors-headers = "^4.4.0"
celery = "^5.4.0"
django-celery-beat = "^2.6.0"
python-telegram-bot = "^21.3"
coverage = "^7.5.4"
drf-yasg = "^1.21.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
